--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
       <button id="reset-game" class="tic_toc__reset_btn">Nuevo juego</button>
     </div>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
