Improve implementation with clases

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -68,6 +68,8 @@
       </div>
 
       <table id="game-table" class="tic_toc__board"></table>
+
+      <button id="change-style" class="tic_toc__change_btn">Cambiar el color</button>
 
       <h2 class="text-center typo_high_l">Puntuación</h2>
 
